# programming-game-planned

./: .gitignore  CLAUDE.md  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/game/: Cargo.toml  build.rs
crates/game/src/: camera.rs  fog.rs  hud.rs  main.rs  palette.rs  scene.rs  tools.rs  view.rs
crates/game/src/editor/: complete.rs  highlight.rs  mod.rs  window.rs
crates/pyrite/: Cargo.toml
crates/pyrite/data/: builtins.ron  costs.ron
crates/pyrite/src/: analysis.rs  ast.rs  costs.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs  unlocks.rs  value.rs  vm.rs
crates/pyrite/tests/: language.rs
crates/sim/: Cargo.toml
crates/sim/data/: mapgen.ron  printers.ron  quirks.ron  stats.ron  tuning.ron  upkeep.ron  xp.ron
crates/sim/src/: actions.rs  channels.rs  damage.rs  feral.rs  hash.rs  host.rs  lib.rs  lockstep.rs  map.rs  mapgen.rs  movement.rs  perception.rs  printers.rs  progression.rs  quirks.rs  replay.rs  resources.rs  sim.rs  stats.rs  world.rs  wrecks.rs  xp.rs
crates/sim/tests/: building.rs  channels.rs  chassis.rs  collision.rs  combat.rs  conformance.rs  determinism.rs  economy.rs  energy.rs  env_quirks.rs  ferals.rs  golden.rs  growth.rs  lockstep.rs  mapgen.rs  multiplayer.rs  perception.rs  printers.rs  progression.rs  replay.rs  station.rs  terrain.rs  (+2 more)
docs/: 00-overview.md  01-language.md  02-agents.md  03-resources.md  04-enemies.md  05-terrain.md  06-progression.md  07-architecture.md  08-multiplayer.md  09-quirks.md  QUESTIONS.md  TASKS.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+2 files in other folders)
