[workspace]
resolver = "3"
members = ["crates/pyrite", "crates/sim", "crates/game"]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Bevy is unusably slow fully unoptimized; optimize dependencies even in
# dev builds (our own crates stay fast to compile).
[profile.dev.package."*"]
opt-level = 2
