[package]
name = "game"
version.workspace = true
edition.workspace = true
description = "Bevy app: rendering, UI, networking (placeholder until sim exists)"

[dependencies]
sim = { path = "../sim" }
pyrite = { path = "../pyrite" }
bevy = "0.16"
bevy_egui = "0.34"

# build.rs bakes assets/art/*.svg into assets/textures/*.png
[build-dependencies]
resvg = "0.45"
